[gd_scene load_steps=6 format=3 uid="uid://byljy6sxrmw0g"]

[ext_resource type="Script" path="res://scripts/winScreen.gd" id="1_l8qy8"]
[ext_resource type="LabelSettings" uid="uid://cnt8s1p4kjwc3" path="res://fonts/scream2Die32.tres" id="1_unlqs"]
[ext_resource type="LabelSettings" uid="uid://30wm55qnregn" path="res://fonts/scream2Die8.tres" id="3_ug62w"]
[ext_resource type="Texture2D" uid="uid://cux8qeuwmdp26" path="res://assets/health.png" id="4_t6ww5"]
[ext_resource type="Texture2D" uid="uid://casj75jvahpvv" path="res://assets/score.png" id="5_oiav0"]

[node name="WinScreen" type="Control"]
custom_minimum_size = Vector2(160, 144)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l8qy8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="WinLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 16.0
offset_right = 62.0
offset_bottom = 32.0
grow_horizontal = 2
text = "YOU WIN"
label_settings = ExtResource("1_unlqs")

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -24.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "00:00:000"
label_settings = ExtResource("3_ug62w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -8.0
offset_right = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_t6ww5")

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -8.0
offset_right = 80.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = ExtResource("1_unlqs")
vertical_alignment = 1

[node name="ScoreRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = 16.0
offset_right = -8.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_oiav0")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 16.0
offset_right = 80.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = ExtResource("1_unlqs")
vertical_alignment = 1

[node name="RetryLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -28.0
offset_right = 45.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Press Start
to play again"
label_settings = ExtResource("3_ug62w")
horizontal_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
